--- a/BaseAdapters/res/layout/custom_dialogue.xml
+++ b/BaseAdapters/res/layout/custom_dialogue.xml
@@ -18,7 +18,7 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginTop="16dp"
-        android:inputType="textEmailAddress" />
+        android:inputType="text" />"
 
     <EditText
         android:id="@+id/EditText2"
@@ -29,6 +29,6 @@
         android:layout_marginRight="4dp"
         android:layout_marginTop="4dp"
         android:fontFamily="sans-serif"
-        android:inputType="textPassword" />
+        android:inputType="text"  />
 
 </LinearLayout>
